Fixed spacing between divs

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,7 @@
 #filter {
 	background-color: #AFC6E0;
 	margin-left: 30px;
+	margin-right: 30px;
 	width: 180px;
 }
 
